# sdk-examples

./: .bazelrc  .gitignore  MODULE.bazel  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build-and-test.yml  flowstate-ci.yml
bazel/: BUILD  non_module_deps.bzl  opencv.BUILD
bazel/content_mirror/: permissive.cfg
data_assets/platform_http_server/: README.md
data_assets/platform_http_server/frontend_2/: BUILD.bazel  hello_world.textproto
notebooks/: 002_solution_building_library.ipynb  002b_executive_and_processes.ipynb  003_world.ipynb  004_skills.ipynb  005_sequence.ipynb  006_loop_and_branch.ipynb  007_retry.ipynb  008_data_and_foreach.ipynb  009_dataflow.ipynb  010_parameterizable_behavior_trees.ipynb  011_scene_object_import.ipynb  012_inspect_blackboard.ipynb  012_kv_storage.ipynb  013_process_recovery.ipynb  scratchpad.ipynb
scripts/recordings/: BUILD  README.md  create_recording.py  generate_and_download_recording.py  generate_and_visualize_recording.py  recording_lib.py
services/angular-hmi/: BUILD  README.md  manifest.textproto  server.go
services/configurable_service/: BUILD  configurable_service.cc  configurable_service.proto  configurable_service.py  configurable_service_cc_manifest.textproto  configurable_service_manifest.textproto
services/counter/: BUILD  counter_service.proto  counter_service.py  counter_service_manifest.textproto
services/hmi/: BUILD  README.md  manifest.textproto  server.go
skills/say_skill/: BUILD  (+7 more)
tests/: BUILD  README.md  points_crud_sbl_ci_test.py  run_ci.sh  sbl_ci.py  stopwatch_sbl_ci_test.py
(+148 files in other folders)
